fix tab flex spacing

--- a/srcmedia/scss/common/_tabs.scss
+++ b/srcmedia/scss/common/_tabs.scss
@@ -4,7 +4,7 @@ nav.tabs {
     align-items: center;
 
     .tab {
-        flex: auto;
+        flex: 1;
         list-style: none;
         height: 2.5rem;
 
